# eyes_of_Priestess

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  audit.py  auth.py  covenant.py  readonly.py
backend/app/core/: __init__.py  config.py  constants.py  time.py
backend/app/modules/: __init__.py
backend/app/modules/audit_log/: __init__.py
backend/app/modules/auth/: __init__.py  token.py
backend/app/modules/covenant_store/: __init__.py
backend/app/modules/episode_editor/: __init__.py
backend/app/modules/everos_gateway/: __init__.py
backend/app/modules/identity_resolver/: __init__.py
backend/app/modules/palimpsest/: PALIMPSEST.md  __init__.py  __main__.py  engine.py
backend/app/modules/palimpsest/plans/: .gitignore  example-delete-entry.json  example-redact-span.json
backend/app/modules/profile_viewer/: __init__.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_covenant_store.py  test_everos_gateway.py  test_everos_gateway_md.py  test_palimpsest_engine.py  test_readonly.py  test_security_boundaries.py  test_static_spa.py
deploy/: .env.example  README.md  readingsteiner-webui.service
docs/: 01-architecture.md  02-security-boundary.md  03-phase-plan.md  04-deployment.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html
scripts/: dev-local.sh  verify-episode-delete.sh
(+10 files in other folders)
